namespaces/synapse/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: synapse
  name: synapse
  namespace: synapse
spec:
  replicas: 1
  selector:
    matchLabels:
      app: synapse
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: synapse
    spec:
      containers:
        - image: docker.io/matrixdotorg/synapse:v1.58.1
          name: synapse
          volumeMounts:
            - mountPath: /data
              name: storage
      volumes:
        - name: storage
          persistentVolumeClaim:
            claimName: synapse
