namespaces/synapse/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: synapse
  name: synapse
  namespace: synapse
spec:
  ports:
  - port: 8008
    protocol: TCP
    targetPort: 8008
    name: synapse
  selector:
    app: synapse
