namespaces/synapse/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: synapse
  namespace: synapse
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls.certresolver: letsencrypt
    traefik.ingress.kubernetes.io/router.tls: true
spec:
  rules:
    - host: matrix.ctnr.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: synapse
                port:
                  name: synapse
