namespaces/synapse/ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: synapse
  namespace: synapse
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`matrix.ctnr.cloud`)
      kind: Rule
      services:
        - name: synapse
          kind: Service
  tls:
    certResolver: letsencrypt
